# final-project-level2-cv-11

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
app/: frontend.py  st_area.py  st_buttons.py
app/models/: ocr.py  translation.py
app/pages/: result.py
app/st_component/: areas.py  buttons.py
configs/: configs.txt
data/words/en/: en.json
data/words/ko/: ko.json
data/words/others/: others.txt
model/: typical_pipeline.py
model/MachineTranslate/: machine_translate.ipynb  papago_MT.py
model/OCR/: clova_OCR.py  ocr.ipynb
model/font_classifier/: dataset_font.py  inference_font.py  model_font.py  train_font.py  typical_FC.py
notebooks/: font_ex.ipynb  imagemaker.py  tesseract_boxes.py  txt2json.ipynb
src/: __init__.py
src/app/: __main__.py  backend.py  frontend.py
src/app/models/: ocr.py  translation.py
src/app/pages/: Output.py  result.py  test.py
src/app/st_component/: areas.py  buttons.py
src/backend/: __main__.py  main.py
src/backend/pipeline/: __init_.py  typical_pipeline.py  untypical_pipeline.py
src/backend/routers/: machine_translation.py  test.py  txt_extraction.py  untypical_generation.py  untypical_machine_translation.py  untypical_txt_extraction.py
src/frontend/: .gitignore  README.md  frontend.py
src/frontend-react/: package-lock.json  package.json
src/frontend-react/public/: index.html
src/frontend-react/src/: App.js  Demo.js  Dev.js  Editor.css  Editor.js  FileContext.js  FontList.js  FontList.json  Footer.js  GlobalContext.js  Loading.js  Main.js  NotFound.js  Result.js  index.css  index.js  myFabric.css  utils.js
src/frontend-react/src/components/: Box.js  DemoButton.js  Header.js  LayerUpload.js  OCRButton.js  Sample.js
src/frontend/src/: Dev.js  Editor.js  Loading.js  font.css
src/frontend/src/components/: Box.js  OCRButton.js  Sample.js
src/frontend/st_component/: areas.py  buttons.py
src/model/: __init__.py
src/model/MachineTranslate/: papago_MT.py
src/model/OCR/: clova_OCR.py  tesseract_OCR.py
src/model/font_classifier/: FC.py  dataset_font.py  loss.py  model_font.py  requirements.txt  scheduler.py  train_font.py  typical_FC.py
src/model/font_classifier/weights/typical/: weigths.txt
src/model/font_classifier/weights/typical_font/: weigths.txt
src/model/font_color/: font_color.py
src/model/font_generator/GAS-NeXt/: .gitignore  font_generate_gasnext.py
src/model/font_generator/GAS-NeXt/data/: font_dataset.py
src/model/font_generator/GAS-NeXt/datasets/: ko.json  utils.py
src/model/font_generator/GAS-NeXt/models/: gas_model.py
src/model/font_generator/GAS-NeXt/options/: base_options.py
src/model/font_generator/GAS-NeXt/util/temp/: aug_test.py
src/model/font_generator/gasnext/: font_generate_gasnext.py  train.py
src/model/font_generator/gasnext/datasets/: eng.json
src/model/font_generator/gasnext/models/: __init__.py  base_model.py  font_translator_gan_model.py
src/model/font_generator/gasnext/models/ftgan_networks/: ftgan_module.py
src/model/font_generator/gasnext/options/: base_options.py
src/model/font_generator/gasnext/scripts/: test.sh  train.sh
src/model/font_generator/mxfont/: eval.py  fdfs.ipynb  font_generate_mxfont.py  get_chars_from_ttf.py  inference.ipynb  train.py
src/model/font_generator/mxfont/cfgs/: defaults.yaml  eval.yaml  train.yaml
src/model/font_generator/mxfont/datasets/: __init__.py  imagefolder_dataset.py  ttf_dataset.py
src/model/svg2ttf/: example.json  svgs2ttf.py
src/pipeline/: __init_.py  typical_pipeline.py
tools/: tools.txt
