[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
torch = "1.7.0"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
albumentations = "1.3.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"
streamlit = "^1.16.0"
opencv-python-headless = "4.6.0.66"
streamlit-drawable-canvas = "^0.9.2"
python-dotenv = "^0.21.0"
torchvision = "0.8.0"
trove-classifiers = "2023.1.12"
anyio = "3.6.2"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asttokens = "2.2.1"
babel = "2.11.0"
backcall = "0.2.0"
bcrypt = "4.0.1"
beautifulsoup4 = "4.9.3"
bleach = "5.0.1"
boto3 = "1.26.30"
botocore = "1.29.30"
brotlipy = "0.7.0"
chardet = "3.0.4"
comm = "0.1.2"
contourpy = "1.0.6"
cycler = "0.11.0"
debugpy = "1.6.4"
defusedxml = "0.7.1"
dnspython = "2.1.0"
executing = "1.2.0"
fastjsonschema = "2.16.2"
fonttools = "4.38.0"
gevent = "22.10.2"
glob2 = "0.7"
greenlet = "2.0.1"
inotify-simple = "1.2.1"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.3"
jedi = "0.17.2"
jmespath = "1.0.1"
json5 = "0.9.10"
jupyter-client = "7.4.8"
jupyter-events = "0.5.0"
jupyterlab = "3.5.1"
jupyterlab-pygments = "0.2.2"
jupyterlab-server = "2.16.5"
jupyterlab-widgets = "3.0.4"
kiwisolver = "1.4.4"
libarchive-c = "2.9"
lxml = "4.9.2"
matplotlib-inline = "0.1.6"
mistune = "2.0.4"
munch = "2.5.0"
nbclassic = "0.4.8"
nbclient = "0.7.2"
nbconvert = "7.2.6"
nbformat = "5.7.0"
nest-asyncio = "1.5.6"
notebook = "6.5.2"
notebook-shim = "0.2.2"
olefile = "0.46"
opencv-python = "4.5.5.64"
pandocfilters = "1.5.0"
paramiko = "2.12.0"
parso = "0.7.0"
pickleshare = "0.7.5"
pkgutil-resolve-name = "1.3.10"
pretrainedmodels = "0.7.4"
prometheus-client = "0.15.0"
prompt-toolkit = "3.0.36"
psutil = "5.7.2"
pure-eval = "0.2.2"
pycocotools = "2.0.4"
pycosat = "0.6.3"
pynacl = "1.5.0"
pyopenssl = "19.1.0"
pyparsing = "3.0.9"
pysocks = "1.7.1"
python-bidi = "0.4.2"
python-etcd = "0.4.5"
python-json-logger = "2.0.4"
pyzmq = "24.0.1"
reportlab = "3.6.12"
retrying = "1.3.4"
ruamel-yaml = "0.15.87"
s3transfer = "0.6.0"
sagemaker-training = "4.4.1"
seaborn = "0.11.2"
send2trash = "1.8.0"
sniffio = "1.3.0"
soupsieve = "2.1"
stack-data = "0.6.2"
terminado = "0.17.1"
timm = "0.4.12"
tinycss2 = "1.2.1"
tqdm = "4.51.0"
traitlets = "5.7.1"
wcwidth = "0.2.5"
webcolors = "1.11.1"
websocket-client = "1.4.2"
werkzeug = "2.2.2"
widgetsnbextension = "4.0.4"
zope-event = "4.5.0"
zope-interface = "5.5.2"
streamlit-extras = "^0.2.5"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
