[tool.poetry]
name = "toonslator-packages"
version = "0.1.0"
description = "toonslator를 실행하기 위한 패키지 의존성 관리"
authors = ["Yera10 <yera9410@gmail.com>", "jerry-ryu", "ta1231", "jane79", "ganghe74"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.5"


[tool.poetry.group.prod.dependencies]
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
albumentations = "^1.3.0"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
pytesseract = "^0.3.10"
sconf = "^0.2.5"
fonttools = "^4.38.0"
python-multipart = "^0.0.5"
torch = "~1.7.0"
torchvision = "~0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
